Partially working orc with optional static link

--- a/components/powerpc/orc/Makefile
+++ b/components/powerpc/orc/Makefile
@@ -3,6 +3,7 @@ $(error $$ONL is undefined.)
 endif
 
 ONL_REQUIRED_SUBMODULES := bigcode infra common
+ONL_REQUIRED_PACKAGES := onlp:powerpc
 
 ARCH := powerpc
 TOOLCHAIN := powerpc-linux-gnu
