--- a/components/powerpc/orc/deb/debuild/debian/rules
+++ b/components/powerpc/orc/deb/debuild/debian/rules
@@ -45,3 +45,5 @@ override_dh_auto_install:
 	
 override_dh_strip:
 	dh_strip --dbg-package=orc
+override_dh_shlibdeps:
+	@echo "warning: ignoring shlibdeps due to libonlp.so dependency."   # hack!
