--- a/components/powerpc/onlp/onlp-powerpc-quanta-ly2-r0/Makefile
+++ b/components/powerpc/onlp/onlp-powerpc-quanta-ly2-r0/Makefile
@@ -2,6 +2,6 @@ ifndef ONL
 $(error $$ONL is undefined.)
 endif
 
-ONL_REQUIRED_SUBMODULES := infra bigcode onlp-quanta
+ONL_REQUIRED_SUBMODULES := infra bigcode onlp-quanta onlp
 
 include $(ONL)/make/component.mk
