docker: sheepishly went back to hackish dependencies

--- a/tools/docker/Dockerfile
+++ b/tools/docker/Dockerfile
@@ -35,6 +35,7 @@ RUN apt-get update && apt-get install -y \
         iputils-ping \
         kmod \
         less \
+        libc6-dev \
         libedit-dev \
         libi2c-dev \
         libtool \
@@ -79,20 +80,33 @@ RUN apt-get update && apt-get install -y \
 # Now the unstable deps and cross compilers
 # NOTE: texinfo 5.x and above breaks the buildroot build, thus the specific 4.x version
 # NOTES: this cp is needed to fix an i2c compile problem
-RUN echo 'deb http://http.debian.net/debian unstable main' >> /etc/apt/sources.list && \
-    dpkg --add-architecture powerpc && \
-    apt-get update && \
-    apt-get install -y  \
-        binutils-powerpc-linux-gnu \ 
-        cpp-powerpc-linux-gnu \
-        gcc-4.7-multilib \
-        gcc-powerpc-linux-gnu \
-        multistrap && \
-    xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
-    cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h && \
-    echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
-    echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list
+#RUN echo 'deb http://http.debian.net/debian unstable main' >> /etc/apt/sources.list && \
+#    dpkg --add-architecture powerpc && \
+#    apt-get update && \
+#    apt-get install -y  \
+#        binutils-powerpc-linux-gnu \ 
+#        cpp-powerpc-linux-gnu \
+#        gcc-4.7-multilib \
+#        gcc-powerpc-linux-gnu \
+#        multistrap && \
+#    xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
+#    cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h && \
+#    echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
+#    echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list
 
 
 # Run this by default if no other command is specified
 #CMD git clone git://github.com/opennetworklinux/ONL && cd ONL && make onl-powerpc onl-x86
+
+RUN echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
+    echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list && \
+    dpkg --add-architecture powerpc && \
+    apt-get update && \
+    apt-get install -y  \
+        libc6-dev-powerpc-cross \
+        binutils-powerpc-linux-gnu=2.22-7.1 \
+        libgomp1-powerpc-cross=4.7.2-4  && \
+    xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
+    cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h
+
+    # update-alternatives --install /usr/bin/powerpc-linux-gnu-gcc powerpc-linux-gnu-gcc /usr/bin/powerpc-linux-gnu-gcc-4.7 10 && \
