Docker: fixed Essential file dependencies
The docker /etc/apt/apt.conf.d/docker-gzip-indexes file
was breaking multistrap's ability to discovery Essential packages
which broke the rest of the build.  removed the file.

--- a/tools/docker/Dockerfile
+++ b/tools/docker/Dockerfile
@@ -78,8 +78,27 @@ RUN apt-get update && apt-get install -y \
 #RUN apt-get insstall binutils-powerpc-linux-gnu libgomp1-powerpc-cross
 
 # Now the unstable deps and cross compilers
-# NOTE: texinfo 5.x and above breaks the buildroot build, thus the specific 4.x version
-# NOTES: this cp is needed to fix an i2c compile problem
+# NOTE 1: texinfo 5.x and above breaks the buildroot build, thus the specific 4.x version
+# NOTE 2: this cp is needed to fix an i2c compile problem
+# NOTE 3: the docker-gzip-indexes options break multistrap so that it can't find
+#       Essential packages
+
+
+
+RUN echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
+    echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list && \
+    dpkg --add-architecture powerpc && \
+    apt-get update && \
+    apt-get install -y  \
+        binutils-powerpc-linux-gnu=2.22-7.1 \
+        gcc-4.7-powerpc-linux-gnu \ 
+        libc6-dev-powerpc-cross \
+        libgomp1-powerpc-cross=4.7.2-4  && \
+    xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
+    update-alternatives --install /usr/bin/powerpc-linux-gnu-gcc powerpc-linux-gnu-gcc /usr/bin/powerpc-linux-gnu-gcc-4.7 10 && \
+    cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h && \
+    rm /etc/apt/apt.conf.d/docker-gzip-indexes
+
 #RUN echo 'deb http://http.debian.net/debian unstable main' >> /etc/apt/sources.list && \
 #    dpkg --add-architecture powerpc && \
 #    apt-get update && \
@@ -96,18 +115,4 @@ RUN apt-get update && apt-get install -y \
 
 
 # Run this by default if no other command is specified
-#CMD git clone git://github.com/opennetworklinux/ONL && cd ONL && make onl-powerpc onl-x86
-
-RUN echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
-    echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list && \
-    dpkg --add-architecture powerpc && \
-    apt-get update && \
-    apt-get install -y  \
-        binutils-powerpc-linux-gnu=2.22-7.1 \
-        gcc-4.7-powerpc-linux-gnu \ 
-        libc6-dev-powerpc-cross \
-        libgomp1-powerpc-cross=4.7.2-4  && \
-    xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
-    update-alternatives --install /usr/bin/powerpc-linux-gnu-gcc powerpc-linux-gnu-gcc /usr/bin/powerpc-linux-gnu-gcc-4.7 10 && \
-    cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h
-
+#CMD make onl-powerpc onl-x86
