docker: both x86 and powerpc working

--- a/tools/docker/Dockerfile
+++ b/tools/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && apt-get install -y \
         debhelper \
         devscripts \
         devscripts \
+        dialog \
         dosfstools \
         dpkg-sig \
         file \
@@ -80,10 +81,10 @@ RUN apt-get update && apt-get install -y \
 # Now the unstable deps and cross compilers
 # NOTE 1: texinfo 5.x and above breaks the buildroot build, thus the specific 4.x version
 # NOTE 2: this cp is needed to fix an i2c compile problem
-# NOTE 3: the /etc/apt/apt.conf.d/docker-* options break multistrap so that it can't find
-#       Essential packages or resolve apt.opennetlinux.org
-
-
+# NOTE 3: the /etc/apt/apt.conf.d/docker-* options break multistrap so
+#       that it can't find.  Essential packages or resolve apt.opennetlinux.org
+# NOTE 4: the default qemu-user-static (1.2) dies with a segfault in
+#       `make onl-powerpc`; use 1.4 instead
 
 RUN echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' | tee /etc/apt/apt.conf.d/99opennetworklinux && \
     echo "deb http://apt.opennetlinux.org/debian/ unstable main" | tee /etc/apt/sources.list.d/opennetlinux.list && \
@@ -97,7 +98,9 @@ RUN echo 'APT::Get::AllowUnauthenticated "true";\nAPT::Get::Assume-Yes "true";' 
     xapt -a powerpc libedit-dev ncurses-dev libsensors4-dev libwrap0-dev libssl-dev libsnmp-dev && \
     update-alternatives --install /usr/bin/powerpc-linux-gnu-gcc powerpc-linux-gnu-gcc /usr/bin/powerpc-linux-gnu-gcc-4.7 10 && \
     cp  /usr/include/linux/i2c-dev.h /usr/powerpc-linux-gnu/include/linux/i2c-dev.h && \
-    rm /etc/apt/apt.conf.d/docker-*
+    rm /etc/apt/apt.conf.d/docker-* \\
+    wget -O $$f "https://launchpad.net/ubuntu/+source/qemu/1.4.0+dfsg-1expubuntu3/+build/4336762/+files/qemu-user-static_1.4.0%2Bdfsg-1expubuntu3_amd64.deb" && \
+    dpkg -i qemu-user-static_1.4.0+dfsg-1expubuntu3_amd64.deb
 
 #RUN echo 'deb http://http.debian.net/debian unstable main' >> /etc/apt/sources.list && \
 #    dpkg --add-architecture powerpc && \
