--- a/components/all/platform-config/powerpc-accton-as5610-52x-r0/deb/Makefile
+++ b/components/all/platform-config/powerpc-accton-as5610-52x-r0/deb/Makefile
@@ -1,47 +1,23 @@
 ############################################################
 # <bsn.cl fy=2013 v=onl>
-#
-#        Copyright 2013, 2014 Big Switch Networks, Inc.
-#
+# 
+#        Copyright 2013, 2014 Big Switch Networks, Inc.       
+# 
 # Licensed under the Eclipse Public License, Version 1.0 (the
 # "License"); you may not use this file except in compliance
 # with the License. You may obtain a copy of the License at
-#
+# 
 #        http://www.eclipse.org/legal/epl-v10.html
-#
+# 
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 # either express or implied. See the License for the specific
 # language governing permissions and limitations under the
 # License.
-#
+# 
 # </bsn.cl>
 ############################################################
-#
-# These are the platforms to include in this installer build.
-#
-############################################################
-INSTALLER_PLATFORMS :=  powerpc-as4600-54t \
-            powerpc-accton-as4600-54t-r0 \
-			powerpc-as5600-52x \
-			powerpc-as5610-52x \
-            powerpc-accton-as5610-52x-r0 \
-			powerpc-as5710-54x-r0a \
-			powerpc-as5710-54x-r0b \
-			powerpc-as6700-32x-r0 \
-			powerpc-accton-as6700-32x-r0 \
-			powerpc-accton-as6700-32x-r1 \
-			powerpc-accton-as5710-54x-r0 \
-			powerpc-accton-as5700-96x-r0 \
-			powerpc-quanta-lb9a-r0 \
-			powerpc-quanta-lb9-r0 \
-			powerpc-quanta-ly2-r0 \
-			powerpc-dni-7448-r0
-
-
-
-
-
-
-
+ARCH=all
+PACKAGE_NAMES=platform-config-powerpc-accton-as5610-52x-r0
+include ../../../../../make/debuild.mk
