Initial build files and submodules for OF-DPA 2.0
Includes rules to build in closed source files and create
the 'ofdpa-2.0-closed' .deb package.

Only BSN employees can build this package, but it is available
for download from apt.opennetlinux.org through apt-get

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,12 @@
 [submodule "submodules/onlp-dell"]
 	path = submodules/onlp-dell
 	url = git@github.com:opennetworklinux/onlp-dell
+[submodule "submodules/ofdpa-2.0"]
+	path = submodules/ofdpa-2.0
+	url = git://github.com/opennetworklinux/ofdpa-2.0
+[submodule "submodules/indigo"]
+	path = submodules/indigo
+	url = git://github.com/floodlight/indigo
+[submodule "submodules/ofdpa-2.0-closed"]
+	path = submodules/ofdpa-2.0-closed
+	url = git@github.com:opennetworklinux/ofdpa-2.0-closed
