Broken attempt to build ofdpa-indigo-ofagent
Need to figure out loci dependency issue

--- a/.gitmodules
+++ b/.gitmodules
@@ -50,3 +50,6 @@
 [submodule "submodules/ofdpa-2.0-closed"]
 	path = submodules/ofdpa-2.0-closed
 	url = git@github.com:opennetworklinux/ofdpa-2.0-closed
+[submodule "submodules/loxigen-artifacts"]
+	path = submodules/loxigen-artifacts
+	url = git://github.com/floodlight/loxigen-artifacts
