--- a/components/any/indigo-ofdpa-ofagent/Makefile.comp
+++ b/components/any/indigo-ofdpa-ofagent/Makefile.comp
@@ -36,7 +36,12 @@ MODULE := indigo-ofdpa-ofagent
 include $(BUILDER)/standardinit.mk
 
 
-DEPENDMODULES := faultd AIM indigo indigo-ofdpa-ofagent
+# indigo-ofdpa-ofagent \
+
+DEPENDMODULES := AIM \
+    SocketManager OFConnectionManager OFStateManager \
+    loci indigo \
+    Configuration BigList BigHash cjson indigo_ofdpa_driver
 
 include $(BUILDER)/dependmodules.mk
 
