--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
@@ -38,7 +38,7 @@ override_dh_auto_install:
         $(BUILD)/linux-user-bde.ko \
         $(INSTALL_DIR)/lib/modules/$(KERNDIR)
 	cp $(BUILD)/librpc_client.so* $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)
-	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin
+	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-quanta-ly2-r0
 	cp $(OFDPA)application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
 	for doc in $(DOCS) ; do \
         cp $(OFDPA)/$$doc $(INSTALL_DIR)/usr/share/doc/ofdpa-2.0-closed ; \
