ofdpa: librpc_client.so.1 --> libofdpa_rpc_client.so.1
renamed for clarity

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
@@ -37,7 +37,7 @@ override_dh_auto_install:
 	cp $(BUILD)/linux-kernel-bde.ko \
         $(BUILD)/linux-user-bde.ko \
         $(INSTALL_DIR)/lib/modules/$(KERNDIR)
-	cp $(BUILD)/librpc_client.so* $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)
+	cp $(BUILD)/librpc_client.so.1 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)/libofdpa_rpc_client.so.1
 	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-quanta-ly2-r0
 	cp $(OFDPA)application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
 	for doc in $(DOCS) ; do \
