--- a/components/any/indigo-ofdpa-ofagent/Makefile.comp
+++ b/components/any/indigo-ofdpa-ofagent/Makefile.comp
@@ -43,6 +43,7 @@ DEPENDMODULES := AIM \
     Configuration BigList BigHash cjson indigo_ofdpa_driver
 
 OFDPA_HEADERS := $(dir $(shell $(ONL_PKG_INSTALL) ofdpa-2.0-closed:powerpc --find-file ofdpa_api.h))
+OFDPA_CLIENT_LIB := $(shell $(ONL_PKG_INSTALL) ofdpa-2.0-closed:powerpc --find-file libofdpa_rpc_client.so.1)
 
 ifndef OFDPA_HEADERS
 $(error Need to download ofdpa-2.0-closed package and put it in $(ONL)/debian/repo/$(ARCH))
@@ -76,11 +77,12 @@ GLOBAL_CFLAGS += -I$(OFDPA_HEADERS)
 GLOBAL_CFLAGS += -g
 
 GLOBAL_CFLAGS += -DINDIGO_OFDPA_DRIVER_CONFIG_INCLUDE_LOGGING=1
-#GLOBAL_CFLAGS += -DINDIGO_OFDPA_DRIVER_CONFIG_LOG_OPTIONS_DEFAULT=1
+BUILD_VERSION=$(shell date '+%a %b %e %Y at %H:%M:%S %Z')
+GLOBAL_CFLAGS += -DBUILD_VERSION="\"Build Version $(BUILD_VERSION)\""
 
-GLOBAL_CFLAGS += -I$(loci_BASEDIR)/module/inc
 
-GLOBAL_LINK_LIBS += -lpthread
+GLOBAL_LINK_LIBS += -lpthread -lm
+GLOBAL_LINK_LIBS += $(OFDPA_CLIENT_LIB)
 
 
 include $(ONL)/make/deb-subdir.mk
