ofagent: fixed deb install

--- a/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/rules
+++ b/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/rules
@@ -15,14 +15,12 @@ build-arch:
 clean:
 	dh clean
 
-SO := libindigo-ofdpa-ofagent.so
-
 override_dh_shlibdeps:
 	@echo "Skipping dh_shlibdeps"
 
 override_dh_auto_install:
-	mkdir -p $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)
-	cp $(BUILD_DIR_BASE)/$(DEB_HOST_GNU_TYPE)/bin/$(SO) $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)/
+	mkdir -p $(INSTALL_DIR)/usr/sbin
+	cp $(BUILD_DIR_BASE)/$(DEB_HOST_GNU_TYPE)/bin/indigo-ofdpa-ofagent $(INSTALL_DIR)/usr/sbin
 
 
 
