--- a/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/control
+++ b/components/any/indigo-ofdpa-ofagent/deb/debuild/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.8.4
 
 Package: indigo-ofdpa-ofagent
 Architecture: any
-Depends: indigo-ofdpa-ofagent-platform, onlp-platform-defaults
-Description: ONLP Base
- ONLP Base
+Depends: ofdpa-2.0-closed
+Description: Indigo OFDPA-based OpenFlow Agent
+ Indigo (http://projectfloodlight.org/indigo) OpenFlow agent with OF-DPA pipeline
