ONL warning at top of Makefile

--- a/components/powerpc/ofdpa-2.0-closed/Makefile
+++ b/components/powerpc/ofdpa-2.0-closed/Makefile
@@ -17,6 +17,10 @@
 # ------------------------------
 #
 ############################################################
+
+ifndef ONL
+$(error Need to define $$ONL to be the top of the tree)
+endif
 ARCH := powerpc
 TOOLCHAIN := powerpc-linux-gnu
 ANYDIR := ofdpa-2.0-closed
