Added OFDPA support for Accton AA5710

--- a/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
+++ b/components/any/ofdpa-2.0-closed/deb/debuild/debian/rules
@@ -6,6 +6,7 @@ PACKAGE_NAME = ofdpa-2.0-closed
 
 OFDPA=$(ONL)/submodules/ofdpa-2.0-closed/
 BUILD=$(OFDPA)/output/ONL/build
+ACCTON=$(OFDPA)/ofdpa-2.0-closed-accton/
 
 DOCS=LEGAL_TERMS README README.md RELEASE_NOTES LICENSE_CDP_BIN README_CDP_SRC
 
@@ -13,6 +14,7 @@ DOCS=LEGAL_TERMS README README.md RELEASE_NOTES LICENSE_CDP_BIN README_CDP_SRC
 # this is a hack, but right now we only support the one kernel/platform
 # FIXME move to use $ONL/tools/kmodcopy.sh
 KERNDIR=3.9.6-OpenNetworkLinux-85xx/ofdpa
+KERNDIR_ACCTON=3.8.13-OpenNetworkLinux-e500mc-1.5/ofdpa
 
 
 %:
@@ -30,6 +32,7 @@ override_dh_shlibdeps:
 override_dh_auto_install:
 	mkdir -p    $(INSTALL_DIR)/usr/bin \
                 $(INSTALL_DIR)/lib/modules/$(KERNDIR) \
+                $(INSTALL_DIR)/lib/modules/$(KERNDIR_ACCTON) \
                 $(INSTALL_DIR)/usr/sbin \
                 $(INSTALL_DIR)/etc/init.d \
                 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE) \
@@ -38,8 +41,13 @@ override_dh_auto_install:
 	cp $(BUILD)/linux-kernel-bde.ko \
         $(BUILD)/linux-user-bde.ko \
         $(INSTALL_DIR)/lib/modules/$(KERNDIR)
+	cp $(ACCTON)/linux-kernel-bde.ko \
+        $(ACCTON)/linux-user-bde.ko \
+        $(INSTALL_DIR)/lib/modules/$(KERNDIR_ACCTON)
 	cp $(BUILD)/librpc_client.so.1 $(INSTALL_DIR)/lib/$(DEB_HOST_GNU_TYPE)/libofdpa_rpc_client.so.1
 	cp $(BUILD)/ofdpa $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-quanta-ly2-r0
+	cp $(ACCTON)/ofdpa-powerpc-as5710-54x-r0b $(INSTALL_DIR)/usr/sbin/ofdpa-powerpc-as5710-54x-r0b
+	cp $(BUILD)/ofagent $(INSTALL_DIR)/usr/sbin/brcm-indigo-ofdpa-ofagent
 	cp $(OFDPA)/application/api/include/*.h $(INSTALL_DIR)/usr/include/ofdpa-2.0
 	cp $(OFDPA)/ofdpa-init.sh $(INSTALL_DIR)/etc/init.d/ofdpa
 	for doc in $(DOCS) ; do \
