Add acpica-tools to ONIE
Add acpica-tools to ONIE (disabled by default). This is the first
commit that will be used for an APD aware ONIE diagnostic image.

Tested against 2015.05 kvm_x86_64.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -315,6 +315,9 @@ endif
 ifeq ($(MTREE_ENABLE),yes)
   include make/mtree.make
 endif
+ifeq ($(ACPI_ENABLE),yes)
+  include make/acpica-tools.make
+endif
 include make/images.make
 include make/demo.make
 
