Fix ONIE build on Debian Jessie
Add libtool-bin as dep package for building ONIE on Debian Jessie.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -373,7 +373,7 @@ machine-prefix:
 # Install required build packages for a x86_64 debian based build host
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools \
 				  gperf device-tree-compiler python-all-dev genisoimage \
-				  autoconf automake bison flex texinfo libtool \
+				  autoconf automake bison flex texinfo libtool libtool-bin \
 				  realpath gawk libncurses5 libncurses5-dev bc
 
 PHONY += debian-prepare-build-host
